--- a/assets/css/Screen.css
+++ b/assets/css/Screen.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'nightcap_nfregular';
-  src: url("nightcap_nf-webfont.woff2") format("woff2"), url("nightcap_nf-webfont.woff") format("woff");
+  src: url("../fonts/nightcap_nf-webfont.woff2") format("woff2"), url("../fonts/nightcap_nf-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -92,7 +92,9 @@ html.bg-color-6 a {
 .cover--text h1 {
   font-size: 80px;
   text-transform: uppercase;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: 'nightcap_nfregular';
+  font-weight: normal;
+  font-style: normal;
 }
 
 .footer--navigation {
