--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -69,7 +69,9 @@ html.bg-color-6 a {
     h1 {
         font-size: 80px;
         text-transform: uppercase;
-        font-family: Georgia, "Times New Roman", Times, serif;
+        font-family: 'nightcap_nfregular';
+        font-weight: normal;
+        font-style: normal;
     }
 }
 .footer--navigation {
