--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -2,6 +2,7 @@
     box-sizing: border-box;
 }
 
+
 ul {
     list-style: none;
     text-transform: uppercase;
@@ -60,33 +61,73 @@ html.bg-color-6 a {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    @include mobile-screen {
+        @media (max-width: 576px) {
+        max-width: 95%;
+        }
+    }
 }
 .cover--text {
     height: 65vh;
-    display: flex;
-    align-items: end;
-    justify-content: center;
+    display: grid;
+    place-items: center;
+    @include mobile-screen {
+        @media (max-width: 576px) {
+            height: 40vh;
+        }
+    }
     h1 {
         font-size: 80px;
         text-transform: uppercase;
         font-family: 'nightcap_nfregular';
         font-weight: normal;
         font-style: normal;
+        @include mobile-screen {
+            @media (max-width: 576px) {
+                font-size: 55px;
+            }
+        }
     }
-}
+    }
+
 .footer--navigation {
     height: 31vh;
     display: flex;
     align-items: end;
     justify-content: center;
+    @include mobile-screen {
+        @media (max-width: 576px) {
+            height: 30vh;
+        }
+    }
     nav {
         ul {
             display: flex;
+            justify-content: space-between;
+ 
+            @include mobile-screen {
+                @media (max-width: 576px) {
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    gap: 10px 68px;
+                }
+            }
+       
             li {
                 margin: 0 45px 0 45px;
+                @include mobile-screen {
+                    @media (max-width: 576px) {
+                        margin: 0 0 10px 0;
+                    }
+                }
                 a {
                     font-size: 14px;
                     text-decoration: none;
+                    @include mobile-screen {
+                        @media (max-width: 576px) {
+                            font-size: 12px;
+                        }
+                    }
                 }
             }
         }
